--- a/portfolio.html
+++ b/portfolio.html
@@ -51,10 +51,11 @@
                     </h1>
 
                     <p class="my-4 text-content">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, ex.
+                        Hi! there! My name is Dea Yunias Waoma. i was born and raised in Aman Damai and currently studying
+                        at Universitas Sumatera Utara <br> under the major of Computer Science.
                     </p>
 
-                    <a href="#" class="btn btn-danger btn-lg shadow-lg">Say Hi!</a>
+                    <a href="https://www.instagram.com/deawaomaa_/" target="_blank" class="btn btn-danger btn-lg shadow-lg">Say Hi!</a>
                 </div>
                 
                 <div class="col-lg-5 order-lg-2 order-1">
@@ -68,7 +69,7 @@
         <div class="container">
             <h2 class="section-header text-center">Awards</h2>
             <p class="text-center mb-4 text-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing.
+                Some of the awards I've won
             </p>
 
             <div class="row gy-4">
@@ -172,15 +173,15 @@
         <div class="container">
             <h2 class="section-header text-center">Gallery</h2>
             <p class="text-center mb-4 text-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing.
+                Photos of me while playing volleyball.
             </p>
 
             <div class="row">
 
-               <div class="col-lg-4 col-sm-6">
+               <div class="col-lg-4 col-sm-6 pb-4">
                     <div class="thumbnail">
                         <div class="img-container">
-                            <img src="/img/1.jpeg" alt="" class="image">
+                            <img src="/img/2.jpeg" alt="" class="image">
                         </div>
                     </div>
                </div>
@@ -188,7 +189,7 @@
                <div class="col-lg-4 col-sm-6">
                     <div class="thumbnail">
                         <div class="img-container">
-                            <img src="/img/2.jpeg" alt="" class="image">
+                            <img src="/img/8.jpeg" alt="" class="image">
                         </div>
                     </div>
                </div>
@@ -204,7 +205,7 @@
                <div class="col-lg-4 col-sm-6">
                     <div class="thumbnail">
                         <div class="img-container">
-                            <img src="/img/4.jpeg" alt="" class="image">
+                            <img src="/img/7.jpeg" alt="" class="image">
                         </div>
                     </div>
                </div>
@@ -233,23 +234,36 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="section-header text-md-start text-center">Contact Me</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta repellendus, quisquam reprehenderit earum, quaerat assumenda sunt non veniam dolor, quod sequi pariatur. Veritatis, optio amet.
-                    </p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497.7584907870268!2d98.65152751098667!3d3.571850637975575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30312f0a5f12dea1%3A0x82a3ab959e9d1e7b!2sLINGGOM!5e0!3m2!1sen!2sid!4v1668878510972!5m2!1sen!2sid" width="300" height="230" style="border: solid black 0.5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mb-3"></iframe>
+                    <a href="https://www.google.com/maps/place/LINGGOM/@3.5718506,98.6515275,20z/data=!4m17!1m10!3m9!1s0x30312fd094b723ad:0x5701aa2da1f57c53!2sNonie's+Huis+Guest+House!5m2!4m1!1i2!8m2!3d3.5719328!4d98.6528761!16s%2Fg%2F11c1lw1mby!3m5!1s0x30312f0a5f12dea1:0x82a3ab959e9d1e7b!8m2!3d3.5719722!4d98.651714!16s%2Fg%2F11h8r5qr86" class="btn btn-danger" target="_blank">Visit Me</a>
                 </div>
 
                 <div class="col-md-8">
                     <form action="">
                         <div class="row">
                             <div class="col-sm-6">
-                                <div class="mb-3">
+                                <div class="mb-3 fw-bold">
                                     <label for="name" class="form-label">Name: </label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                    <input type="text" class="form-control">
                                 </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <div class="mb-3 fw-bold">
+                                    <label for="email" class="form-label">Email: </label>
+                                    <input type="email" class="form-control">
+                                </div>
+                            </div>
+
+                    
+                            <div class="mb-3">
+                                <label for="message" class="form-label fw-bold">Message: </label>
+                                <textarea name="" id="message" class="form-control" rows="6"></textarea>
                             </div>
                         </div>
                     </form>
+
+                    <button type="button" class="btn btn-danger" href="">Submit</button>
                 </div>
             </div>
         </div>
