--- a/warung.html
+++ b/warung.html
@@ -10,6 +10,7 @@
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="icon" type="image/x-icon" href="/img/fork.png">
         <link
             href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet">
@@ -30,22 +31,43 @@
                         <a class="nav-link active gerak" aria-current="page" href="#">Home</a>
                         <a class="nav-link active gerak" href="#">Features</a>
                         <a class="nav-link active gerak" href="#">Pricing</a>
-                        <a class="nav-link active gerak" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link active gerak" href="#" tabindex="-1">Disabled</a>
                     </div>
                 </div>
             </div>
         </nav>
         <!-- navbar -->
         <section class="min-vh-100 d-flex align-items-center py-lg-0 py-5">
-            <nav class="container">
-                <div class="col-4">
-                    <h1 class="main-header">Selamat Datang <br> di <span class="text-danger">warungKu!</span>
-                    </h1>
-                    <p class="my-4 text-content text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eum facere optio id. Quibusdam necessitatibus perferendis distinctio, corporis hic ipsum commodi
-                        blanditiis, ea mollitia sit est. Provident ab reprehenderit beatae vel?</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-lg-6">
+                        <h1 class="main-header">Selamat Datang <br> di <span class="text-danger">warungKu!</span>
+                        </h1>
+                        <p class="my-4 text-content text-justify">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Eum facere optio id. Quibusdam necessitatibus perferendis distinctio, corporis hic
+                            ipsum commodi blanditiis, ea mollitia sit est. Provident ab reprehenderit beatae vel?</p>
+                    </div>
+                    <div class="col col-lg-6">
+                        <img class="deaLogo" src="img/fork.png" alt="Dea Logo">
+                    </div>
                 </div>
-            </nav>
+            </div>
+        </section>
+        <section>
+            <div class="slide-container">
+                <div class="slide-content">
+                    <div class="card-wrapper">
+                        <div class="card">
+                            <div class="image-content">
+                                <span class="overlay"> </span>
+                                <div class="card-image">
+                                    <img src="/img/ayam-penyet.jpg" alt="ayam penyet" class="card-img">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
             integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
