editing slider card in warungKu

--- a/warung.html
+++ b/warung.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="war.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="swiper-bundle-.min.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="icon" type="image/x-icon" href="/img/fork.png">
@@ -47,34 +48,36 @@
                             elit. Eum facere optio id. Quibusdam necessitatibus perferendis distinctio, corporis hic
                             ipsum commodi blanditiis, ea mollitia sit est. Provident ab reprehenderit beatae vel?</p>
                     </div>
-                    <div class="col col-lg-6">
-                        <img class="deaLogo" src="img/fork.png" alt="Dea Logo">
+                    <div class="col col-lg-6 ">
+                        <img class="warungLogo" src="img/fork.png" alt="Dea Logo">
                     </div>
                 </div>
             </div>
         </section>
-        <section>
+        <section class="sliding-card">
             <div class="slide-container">
                 <div class="slide-content">
                     <div class="card-wrapper">
-                        <div class="card">
+                        <div class="cards">
                             <div class="image-content">
-                                <span class="overlay"> </span>
                                 <div class="card-image">
                                     <img src="/img/ayam-penyet.jpg" alt="ayam penyet" class="card-img">
                                 </div>
+                                <div class="card-content">
+                                    <h2 class="cardName">Ayam Penyet</h2>
+                                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        Ratione quos tenetur exercitationem nesciunt aperiam distinctio explicabo harum
+                                        neque corporis nam.</p>
+                                </div>
+                                <button class="button">Buy</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
-            integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
-            crossorigin="anonymous"></script>
+        <script src="swiper-bundle.min.js"></script>
+        <script src="warungKu.js"></script>
     </body>
 
 </html>
