--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
 <body>
 
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">waOma</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ms-auto">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
         <a class="nav-link active gerak" aria-current="page" href="#">Home</a>
         <a class="nav-link active gerak" href="#">Features</a>
         <a class="nav-link active gerak" href="#">Pricing</a>
@@ -40,7 +40,7 @@
 </nav>
 
     <!--About-->
-    <section class="min-vh-100 d-flex align-items-center py-lg-0 py-5" id="about">
+    <section class="vh-100 d-flex align-items-center py-lg-0 py-5" id="about">
         <div class="container">
             <div class="row align-items-center g-5 g-lg-0">
                 <div class="col-lg-7 order-lg-1 order-2">
