Finishing Home and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active gerak" aria-current="page" href="#">Home</a>
-        <a class="nav-link active gerak" href="#">Features</a>
-        <a class="nav-link active gerak" href="#">Pricing</a>
-        <a class="nav-link active gerak" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link active gerak" aria-current="page" href="music.html">Home</a>
+        <a class="nav-link active gerak" href="portfolio.html">Portfolio</a>
+        <a class="nav-link active gerak" href="#">Content</a>
       </div>
     </div>
   </div>
