adding college-course.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,49 +20,44 @@
             rel="stylesheet">
     </head>
 
-<body>
-
-    <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">waOma</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link active gerak" aria-current="page" href="#">Home</a>
-        <a class="nav-link active gerak" href="#">Features</a>
-        <a class="nav-link active gerak" href="#">Pricing</a>
-        <a class="nav-link active gerak" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </div>
-    </div>
-  </div>
-</nav>
-
-    <!--About-->
-    <section class="vh-100 d-flex align-items-center py-lg-0 py-5" id="about">
-        <div class="container">
-            <div class="row align-items-center g-5 g-lg-0">
-                <div class="col-lg-7 order-lg-1 order-2">
-                    <h1 class="main-header">
-                        Welcome! I am
-                        <br>
-                        <span class="text-danger">Dea Yunias Waoma</span>
-                    </h1>
-
-                    <p class="my-4 text-content">
-                        Hi! there! My name is Dea Yunias Waoma. i was born and raised in Aman Damai and currently studying
-                        at Universitas Sumatera Utara <br> under the major of Computer Science.
-                    </p>
-
-                    <a href="https://www.instagram.com/deawaomaa_/" target="_blank" class="btn btn-danger btn-lg shadow-lg">Say Hi!</a>
-                </div>
-                
-                <div class="col-lg-5 order-lg-2 order-1">
-                    <img class="self-portrait" src="/img/2.jpeg" alt="Dea yunias waoma" height="500">
+    <body>
+        <!--navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">waOma</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link active gerak" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active gerak" href="#">Features</a>
+                        <a class="nav-link active gerak" href="#">Pricing</a>
+                        <a class="nav-link active gerak" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </div>
                 </div>
             </div>
+        </nav>
+        <!--About-->
+        <section class="vh-100 d-flex align-items-center py-lg-0 py-5" id="about">
+            <div class="container">
+                <div class="row align-items-center g-5 g-lg-0">
+                    <div class="col-lg-7 order-lg-1 order-2">
+                        <h1 class="main-header"> Welcome! I am <br>
+                            <span class="text-danger">Dea Yunias Waoma</span>
+                        </h1>
+                        <p class="my-4 text-content"> Hi! there! My name is Dea Yunias Waoma. i was born and raised in
+                            Aman Damai and currently studying at Universitas Sumatera Utara <br> under the major of
+                            Computer Science. </p>
+                        <a href="https://www.instagram.com/deawaomaa_/" target="_blank"
+                            class="btn btn-danger btn-lg shadow-lg">Say Hi!</a>
+                    </div>
+                    <div class="col-lg-5 order-lg-2 order-1">
+                        <img class="self-portrait" src="/img/2.jpeg" alt="Dea yunias waoma" height="500">
+                    </div>
+                </div>
         </section>
         <section class="my-5" id="projects">
             <div class="container">
