editing 'portfolio.html'

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,7 @@
                             class="btn btn-danger btn-lg shadow-lg">Say Hi!</a>
                     </div>
                     <div class="col-lg-5 order-lg-2 order-1">
-                        <img class="self-portrait" src="/img/2.jpeg" alt="Dea yunias waoma" height="500"> >>>>>>>
-                        7d0e84968313aa90467339192c06de4a88cf7843
+                        <img class="self-portrait" src="/img/2.jpeg" alt="Dea yunias waoma" height="500">
                     </div>
                 </div>
                 <div class="col-lg-5 order-lg-2 order-1">
