--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active gerak" aria-current="page" href="music.html">Home</a>
                         <a class="nav-link active gerak" href="portfolio.html">Portfolio</a>
-                        <a class="nav-link active gerak" href="#">Content</a>
+                        <a class="nav-link active gerak" href="college-course.html">College</a>
                     </div>
                 </div>
             </div>
