fixing whole website navbar

--- a/content.html
+++ b/content.html
@@ -33,7 +33,7 @@
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active gerak" aria-current="page" href="music.html">Home</a>
                         <a class="nav-link active gerak" href="portfolio.html">Portfolio</a>
-                        <a class="nav-link active gerak" href="college-course.html">College</a>
+                        <a class="nav-link active gerak" href="content.html">Content</a>
                     </div>
                 </div>
             </div>
