--- a/music.html
+++ b/music.html
@@ -22,19 +22,19 @@
 
     <body>
         <!--navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">waOma</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
+            <div class="container ">
+                <a class="navbar-brand text-light" href="#">waOma</a>
+                <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active gerak" aria-current="page" href="music.html">Home</a>
-                        <a class="nav-link active gerak" href="portfolio.html">Portfolio</a>
-                        <a class="nav-link active gerak" href="college-course.html">College</a>
+                        <a class="nav-link active gerak text-light" aria-current="page" href="music.html">Home</a>
+                        <a class="nav-link active gerak text-light" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link active gerak text-light" href="content.html">Content</a>
                     </div>
                 </div>
             </div>
