EVERYONE!!!, THAT IS A FUCKING WRAPP

--- a/content.html
+++ b/content.html
@@ -21,9 +21,9 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
-                <a class="navbar-brand" href="#">waOma</a>
+                <a class="navbar-brand" href="#">wa<span class="text-danger">O</span>ma</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -38,60 +38,169 @@
                 </div>
             </div>
         </nav>
-        <section class="mb-5">
-            <table class="table">
-                <tr class="table-row">
-                </tr>
-                <tr class="table-row">
-                </tr>
-                <tr class="table-row">
-                </tr>
-                <tr class="table-row">
-                </tr>
-                <tr class="table-row">
-                </tr>
-                <tr class="table-row">
-                </tr>
-            </table>
+
+        <div class="container">
+            <h1 class="roster text-danger">Roster</h1>
+        </div>
+
+        <section class="mb-3">
+            <div class="container">
+                <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>Hari</th>
+                        <th>MataKuliah</th>
+                        <th>Dosen</th>
+                    </tr>
+                </thead>
+                
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Senin</td>
+                        <td>Basis Data<br>Pemrograman Web<br>Lab Basis Data</td>
+                        <td>Dr. Maya Silvi Lydia B.Sc., M.Sc.<br>T. Henny Febriana Harumy S.Kom., M.Kom<br>Wilson</td>
+                    </tr>
+
+                    <tr>
+                        <td>2</td>
+                        <td>Selasa</td>
+                        <td>Mikroprosessor<br>Lab Pemrograman Web</td>
+                        <td>Dr. Poltak Sihombing M.Kom.<br>Petrus Marcellino Tampubolon</td>
+                    </tr>
+
+                    <tr>
+                        <td>3</td>
+                        <td>Rabu</td>
+                        <td>Komputasi Numerik<br>Lab Mikroprosesor<br>Desain Analisis Algoritma</td>
+                        <td>Dewi Sartika Br Ginting S.Kom., M.Kom<br>Ramadhan<br>Dr. Mohammad Andri Budiman S.T., M.Comp.Sc., M.E.M.</td>
+                    </tr>
+
+                    <tr>
+                        <td>4</td>
+                        <td>Kamis</td>
+                        <td>Kewirausahaan<br>Lab Desain Analisis Algoritma</td>
+                        <td>Fauzan Nurahmadi S.Kom., M.Cs<br>Petrus Marcellino Tampubolon</td>
+                    </tr>
+
+                    <tr>
+                        <td>5</td>
+                        <td>Jumat</td>
+                        <td>MKWU</td>
+                        <td>-</td>
+                    </tr>
+                </tbody>
+            </table>   
+            </div>    
         </section>
-        <section class="silabus">
-            <div class="row ps-5 pe-5">
-                <div class="col">
-                    <h2>Desain dan Analisis Algoritma</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis perferendis enim pariatur eius
-                        itaque reiciendis dolor odio animi quibusdam est? Lorem ipsum dolor sit, amet consectetur
-                        adipisicing elit. Praesentium nam at sapiente dolorum illum tempore quos aspernatur a
-                        necessitatibus ut?</p>
-                    <h2>Komputasi Numerik</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, accusantium nam dolorum
-                        reiciendis rerum non sit atque iure vero quod. Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Laborum et fugiat, perspiciatis ipsam alias explicabo velit dolor est quam
-                        mollitia?</p>
-                    <h2>Basis Data</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique non veritatis molestiae
-                        corporis aliquam amet quidem expedita fuga magnam! Debitis! Lorem ipsum dolor sit amet
-                        consectetur adipisicing elit. Odio, ratione mollitia reprehenderit repudiandae consectetur ab
-                        natus a minima excepturi labore.</p>
+
+        <div class="container">
+            <section style="background-color: #dc3545; color: white; padding: 50px 10px;" class="mb-5 bulet">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
                 </div>
-                <div class="col">
-                    <h2>Pmrograman Web</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam cupiditate repellendus
-                        facilis soluta. Totam expedita exercitationem consequatur blanditiis eos sint, deserunt natus
-                        suscipit, quasi facilis ducimus doloribus culpa impedit itaque nisi veritatis unde! Hic dolor
-                        minus nostrum officia, aliquid dolore?</p>
-                    <h2>MKWU</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima nesciunt, eos placeat fugit
-                        corporis consequatur esse temporibus perspiciatis illum dolore a necessitatibus voluptatibus
-                        aliquid dolorum porro? Dolore, sed eos dolorem repudiandae, omnis dicta alias nihil repellendus
-                        ut, provident reiciendis cupiditate!</p>
-                    <h2>Pratikum</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint perferendis at nesciunt dicta
-                        aliquam rerum in voluptatem quasi natus blanditiis officiis consequatur dolorem, illum
-                        architecto sequi minus consequuntur maxime magnam, ut laudantium temporibus beatae
-                        necessitatibus eum. Aperiam nisi qui asperiores.</p>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="container">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <div>
+                                    <img class="img-fluid" src="/img/b1.jpg" alt="basisdata">
+                                </div>
+                                <div class="ms-4">
+                                    <h2>Basis Data</h2>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus totam consequuntur velit. Laborum sit perferendis suscipit corporis sint ab dolore.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <div>
+                                        <img class="img-fluid" src="/img/b2.jpg" alt="basisdata">
+                                    </div>
+                                    <div class="ms-4">
+                                        <h2>Komputasi Numerik</h2>
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus totam consequuntur velit. Laborum sit perferendis suscipit corporis sint ab dolore.</p>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <div>
+                                        <img class="img-fluid" src="/img/b3.jpg" alt="basisdata">
+                                    </div>
+                                    <div class="ms-4">
+                                        <h2>Desain dan Analisis Algoritma</h2>
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus totam consequuntur velit. Laborum sit perferendis suscipit corporis sint ab dolore.</p>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <div>
+                                        <img class="img-fluid" src="/img/b4 (1).jpg" alt="basisdata">
+                                    </div>
+                                    <div class="ms-4">
+                                        <h2>Pemrograman Web</h2>
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus totam consequuntur velit. Laborum sit perferendis suscipit corporis sint ab dolore.</p>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                     <div class="carousel-item">
+                        <div class="container">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <div>
+                                        <img class="img-fluid"src="/img/mkwu.jpg" alt="basisdata">
+                                    </div>
+                                    <div class="ms-4">
+                                        <h2>MKWU</h2>
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus totam consequuntur velit. Laborum sit perferendis suscipit corporis sint ab dolore.</p>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                     <div class="carousel-item">
+                        <div class="container">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <div>
+                                        <img class="img-fluid" src="/img/b5.jpg" alt="basisdata">
+                                    </div>
+                                    <div class="ms-4">
+                                        <h2>Praktikum</h2>
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus totam consequuntur velit. Laborum sit perferendis suscipit corporis sint ab dolore.</p>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </section>
+        </div>
+
+        
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 
 </html>
